--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li>
+							<li>&copy; Duan</li>
 							<li>Design: <a href="https://html5up.net/">HTML5 UP</a></li>
 						</ul>
 					</footer>
